--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                         <li class="nav__item"><a href="#academics" class="nav__link">Academics and Goals</a></li>
-                        <li class="nav__item"><a href="#skills" class="nav__link">Skills and Expireance</a></li>
+                        <li class="nav__item"><a href="#skills" class="nav__link">Skills and Experience</a></li>
                         <li class="nav__item"><a href="#project" class="nav__link">Projects</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                     </ul>
@@ -124,7 +124,7 @@
                     </div>
 
                     
-                    <p class="skills__text"><strong>Have one year Expireance</strong>  at Infosys Mysore .</p>
+                    <p class="skills__text"><strong>Have one year Experience</strong>  at Infosys Mysore .</p>
                 </div>
             </section>
 
@@ -222,7 +222,7 @@
                         <li><a href="#home" class="footer__link">Home</a></li>
                         <li><a href="#about" class="footer__link">About</a></li>
                        <li>><a href="#academics"class="footer__link">Academics and Goals</a></li>
-                        <li><a href="#skills" class="footer__link">Skills and Expireance</a></li>
+                        <li><a href="#skills" class="footer__link">Skills and Experience</a></li>
                         <li><a href="#project" class="footer__link">project</a></li>
                         <li><a href="#Contact" class="footer__link">Contact</a></li>
                     </ul>
