--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <div class="contact__container bd-grid">
                     <div class="contact__info">
                         <h3 class="contact__subtitle">EMAIL</h3>
-                        <span class="contact__text">info.mail.com</span>
+                        <span class="contact__text">sheena431.mail.com</span>
 
                         <h3 class="contact__subtitle">PHONE</h3>
                         <span class="contact__text">+20 999-999</span>
