--- a/index.html
+++ b/index.html
@@ -185,13 +185,13 @@
                 <div class="contact__container bd-grid">
                     <div class="contact__info">
                         <h3 class="contact__subtitle">EMAIL</h3>
-                        <span class="contact__text">sheena431.mail.com</span>
+                        <span class="contact__text">sheenathomas431@gmail.com</span>
 
                         <h3 class="contact__subtitle">PHONE</h3>
                         <span class="contact__text">+20 999-999</span>
 
                         <h3 class="contact__subtitle">ADDRESS</h3>
-                        <span class="contact__text">My country</span>
+                        <span class="contact__text">India</span>
                     </div>
 
                     <form action="" class="contact__form">
