--- a/index.html
+++ b/index.html
@@ -91,7 +91,10 @@
                             secured 10 cgpa in 10th grade, CBSE and 85 percentage in 12th. Completed my Btech in Computer Science from Amal Jyothi College of Engineering, APJ Abdul Kalam University with flying colours.
 
                         </p>
-                        <p class="academics__text"><strong>Goals</strong>
+                        <div class="parallax">
+
+                        </div>
+                        <p class="academics__text"><strong><br>Goals</strong>
                             to create softwares beneficial for the people and make the lives of people easier.
 
                             </p>
