--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
                          </p>
                         
-                    
+                    </div>
                 </div>
             </section>
   
