--- a/index.html
+++ b/index.html
@@ -46,6 +46,18 @@
                     <div class="home__scroll">
                         <a href="#about" class="home__scroll-link"><i class='bx bx-up-arrow-alt' ></i>Scroll down</a>
                     </div>
+                     <div class="animation-area">
+                        <ul class="box-area">
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    
+                    </div>
+                    </div>
 
                     <img src="assets/img/perfil.png" alt="" class="home__img">
                 </div>
