--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             </section>
             
             <!--===== ABOUT =====-->
+            <div class="ping1">
             <section class="about section" id="about">
                 <h2 class="section-title">About</h2>
 
@@ -86,9 +87,11 @@
                         </div>
                     </div>
                 </div>
+                </section> 
+    </div> 
   <!--===== Academics =====-->
 
-            </section>
+            <div class="ping2">
             <section class="academics section" id="academics">
                 <h2 class="section-title">Academics and Goals</h2>
 
@@ -113,8 +116,9 @@
                     </div>
                 </div>
             </section>
-  
+  </div>
             <!--===== SKILLS =====-->
+            <div class="ping3">
             <section class="skills section" id="skills">
                 <h2 class="section-title">Skills and Expireance</h2>
 
@@ -141,8 +145,9 @@
                     <p class="skills__text"><strong>Have one year Experience</strong>  at Infosys Mysore .</p>
                 </div>
             </section>
-
+ </div>
             <!--===== project =====-->
+             <div class="ping4">
             <section class="project section" id="project">
                 <h2 class="section-title">Projects</h2>
 
@@ -191,8 +196,9 @@
                     </div>
                 </div>
             </section>
-
+  </div>
             <!--===== CONTACT =====-->
+             <div class="ping5">
             <section class="contact section" id="contact">
                 <h2 class="section-title">Contact</h2>
 
@@ -221,7 +227,7 @@
                 </div>
             </section>
         </main>
-
+ </div>
         <!--===== FOOTER =====-->
         <footer class="footer section">
             <div class="footer__container bd-grid">
