--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <img src="assets/img/perfil.png" alt="">
                     </div>
 
-                    <div class="paraabout">
+                    <div>
                         <h2 class="about__subtitle">I'am Sheena</h2>
                         <span class="about__profession">Computer Science Engineer</span>
                         <p class="about__text"> I'm an Mtech student at IITB Computer Science Department. I was born and raised in Mumbai.
