--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                     <div>
                         <h2 class="about__subtitle">I'am Sheena</h2>
                         <span class="about__profession">Computer Science Engineer</span>
-                        <p class="about__text"> I'm an Mtech student at IITB Computer Science Department. I was born and raised in Mumbai.
-                                                Being a passionate coder I love to get into systems besides that I like to travel.
+                        <p class="about__text"> I'm an Btech student at Amal Jyoyhi college of Engineering Computer Science Department. I was born and raised in Mumbai.
+                                                Being a passionate about coding  I love to get into systems besides that I like to travel.
                                                 I believe travelling gives a new perspective and a deeper insight to everything.
                         </p>
 
@@ -128,9 +128,9 @@
                         <span class="skills__name">Html</span>
                         <span class="skills__name">Css</span>
                         <span class="skills__name">Javascript</span>
-                        <span class="skills__name">Scss</span>
+                        <span class="skills__name">Cloud Computing</span>
                         <span class="skills__name">React</span>
-                        <span class="skills__name">Vue</span>
+                        <span class="skills__name">BootStrap</span>
                         
                         <h3 class="skills__subtitle">Design</h3>
                         <span class="skills__name">Figma</span>
@@ -142,7 +142,7 @@
                     </div>
 
                     
-                    <p class="skills__text"><strong>Have one year Experience</strong>  at Infosys Mysore .</p>
+                    <p class="skills__text"><strong>Have 7 days Experience</strong>  at Pacelab kochi.</p>
                 </div>
             </section>
  </div>
