--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="assets/img/perfil.png" alt="">
+                        <img src="assets/img/CSE-B Sheena.jpg" alt="">
                     </div>
 
                     <div>
                         <h2 class="about__subtitle">I'am Sheena</h2>
                         <span class="about__profession">Computer Science Engineer</span>
-                        <p class="about__text"> I'm an Btech student at Amal Jyoyhi college of Engineering Computer Science Department. I was born and raised in Mumbai.
+                        <p class="about__text"> I'm an Btech student at Amal Jyothi college of Engineering Computer Science Department. I was born and raised in Mumbai.
                                                 Being a passionate about coding  I love to get into systems besides that I like to travel.
                                                 I believe travelling gives a new perspective and a deeper insight to everything.
                         </p>
