--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
                         <span class="skills__name">React</span>
                         <span class="skills__name">BootStrap</span>
                         
-                        <h3 class="skills__subtitle">Design</h3>
-                        <span class="skills__name">Figma</span>
-                        <span class="skills__name">Adobe XD</span>
-                        <span class="skills__name">Photoshop</span>
+                        <h3 class="skills__subtitle">Languages</h3>
+                        <span class="skills__name">C</span>
+                        <span class="skills__name">Java</span>
+                        <span class="skills__name">Python</span>
                     </div>
                     <div class="skills__img">
                         <img src="assets/img/skill.jpg" alt="">
