--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                         
                         
                         <p class="academics__text"><strong>Academics</strong>
-                            secured 10 cgpa in 10th grade, CBSE and 85 percentage in 12th. Completed my Btech in Computer Science from Amal Jyothi College of Engineering, APJ Abdul Kalam University with flying colours.
+                            secured 10 cgpa in 10th grade, CBSE and 85 percentage in 12th. Currently pursuing my Btech in Computer Science from Amal Jyothi College of Engineering, APJ Abdul Kalam University.
 
                         </p>
                         <div class="parallax">
