--- a/index.html
+++ b/index.html
@@ -263,6 +263,6 @@
         <script src="https://unpkg.com/scrollreveal"></script>
 
         <!--===== MAIN JS =====-->
-        <script src="assets/main.js"></script>
+        <script src="main.js"></script>
     </body>
 </html>
