--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div>
                         <h2 class="about__subtitle">I'am Sheena</h2>
                         <span class="about__profession">Computer Science Engineer</span>
-                        <p class="about__text"> I'm an Btech student at Amal Jyothi college of Engineering Computer Science Department. I was born and raised in Mumbai.
+                        <p class="about__text"> I'm an Btech student at Amal Jyothi college of Engineering in Computer Science Department. I was born and raised in Mumbai.
                                                 Being a passionate about coding  I love to get into systems besides that I like to travel.
                                                 I believe travelling gives a new perspective and a deeper insight to everything.
                         </p>
